--- a/Estilosp3.css
+++ b/Estilosp3.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f4f4f9;
+    background-color: #ffbaec;
     color: #333;
 }
 
@@ -12,7 +12,7 @@ body {
     margin: 50px auto;
     padding: 20px;
     background: white;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(255, 186, 236, 0.1);
     border-radius: 10px;
 }
 
